test/classes/errors/nilability-return-yield/yield-owned.good
yield-owned.chpl:3: In iterator 'I':
yield-owned.chpl:3: error: Cannot initialize 'owned C' from a 'owned C?'
